ADD_LIBRARY(libyasm
    arch.cpp
    assoc_data.cpp
    bitvect.cpp
    bc-align.cpp
    #bc-data.c
    bc-incbin.cpp
    bc-org.cpp
    bc-reserve.cpp
    bytecode.cpp
    bytes.cpp
    compose.cpp
    directive.cpp
    effaddr.cpp
    errwarn.cpp
    expr.cpp
    file.cpp
    floatnum.cpp
    insn.cpp
    intnum.cpp
    linemap.cpp
    md5.cpp
    module.cpp
    name_value.cpp
    nocase.cpp
    object.cpp
    object_format.cpp
    phash.cpp
    section.cpp
    symbol.cpp
    value.cpp
    )
SET_TARGET_PROPERTIES(libyasm PROPERTIES OUTPUT_NAME "yasm")

ADD_SUBDIRECTORY(tests)
