ADD_LIBRARY(libyasm
    arch.cpp
    assembler.cpp
    assoc_data.cpp
    bitvect.cpp
    bc-align.cpp
    #bc-data.c
    bc-incbin.cpp
    bc-org.cpp
    bc-reserve.cpp
    bytecode.cpp
    bytes.cpp
    compose.cpp
    debug_format.cpp
    directive.cpp
    effaddr.cpp
    errwarn.cpp
    errwarns.cpp
    expr.cpp
    expr_util.cpp
    file.cpp
    floatnum.cpp
    insn.cpp
    intnum.cpp
    linemap.cpp
    location.cpp
    location_util.cpp
    md5.cpp
    module.cpp
    name_value.cpp
    nocase.cpp
    object.cpp
    object_format.cpp
    phash.cpp
    registry.cpp
    section.cpp
    symbol.cpp
    value.cpp
    )
SET_TARGET_PROPERTIES(libyasm PROPERTIES OUTPUT_NAME "yasm")

ADD_SUBDIRECTORY(tests)
