ADD_LIBRARY(libyasm
    arch.cpp
    assembler.cpp
    assoc_data.cpp
    bc_container.cpp
    bc-align.cpp
    bc-data.cpp
    bc-incbin.cpp
    bc-multiple.cpp
    bc-org.cpp
    bitvect.cpp
    bytecode.cpp
    bytecode_util.cpp
    bytes.cpp
    compose.cpp
    debug_format.cpp
    directive.cpp
    effaddr.cpp
    errwarn.cpp
    errwarns.cpp
    expr.cpp
    expr_util.cpp
    file.cpp
    floatnum.cpp
    insn.cpp
    intnum.cpp
    linemap.cpp
    list_format.cpp
    location.cpp
    location_util.cpp
    md5.cpp
    module.cpp
    name_value.cpp
    nocase.cpp
    object.cpp
    object_format.cpp
    parser.cpp
    phash.cpp
    preproc.cpp
    registry.cpp
    section.cpp
    symbol.cpp
    value.cpp
    )
SET_TARGET_PROPERTIES(libyasm PROPERTIES OUTPUT_NAME "yasm")

ADD_SUBDIRECTORY(tests)
