IF(NOT BUILD_STATIC)
    INSTALL(FILES
        Arch.h
        Assembler.h
        AssocData.h
        BytecodeContainer.h
        BytecodeContainer_util.h
        BytecodeOutput.h
        Bytecode.h
        Bytecode_util.h
        Bytes.h
        Bytes_util.h
	Bytes_leb128.h
        DebugFormat.h
        Directive.h
        DirHelpers.h
        EffAddr.h
        Errwarns.h
        Expr.h
        Expr_util.h
        FloatNum.h
        Includes.h
        Insn.h
        IntNum.h
        IntNum_iomanip.h
        Linemap.h
        ListFormat.h
        Location.h
        Location_util.h
        Module.h
        NameValue.h
        ObjectFormat.h
        Object.h
        Object_util.h
        Op.h
        Parser.h
        Preprocessor.h
        Reloc.h
        Section.h
        StringTable.h
        Symbol.h
        SymbolRef.h
        Symbol_util.h
        Value.h
        DESTINATION ${INCLUDE_INSTALL_DIR}/libyasmx
        )
ENDIF(NOT BUILD_STATIC)

ADD_SUBDIRECTORY(Config)
ADD_SUBDIRECTORY(Support)
ADD_SUBDIRECTORY(System)
